force-app/main/default/objects/SmartIntake_Branding_Config__mdt/SmartIntake_Branding_Config__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Branding Config</label>
    <pluralLabel>SmartIntake Branding Configs</pluralLabel>
</CustomObject>