force-app/main/default/objects/SmartIntake_Branding_Config__mdt/fields/Agent_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Display_Name__c</fullName>
    <label>Agent Display Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>