force-app/main/default/objects/SmartIntake_Branding_Config__mdt/fields/Avatar_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Icon_Name__c</fullName>
    <label>Avatar Icon Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>