force-app/main/default/objects/SmartIntake_Branding_Config__mdt/fields/Avatar_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Image_URL__c</fullName>
    <label>Avatar Image URL</label>
    <type>Url</type>
</CustomField>