force-app/main/default/objects/SmartIntake_Branding_Config__mdt/fields/Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Message__c</fullName>
    <label>Welcome Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>